feat(javafx): improve completion, indent guides and CEFFX preview